修改一大堆乱起八糟的格式问题